--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,10 +31,12 @@ body{
 
 header{
     width: 100%;
+    /* height: 120px; */
     padding: 30px 0;
     position: fixed;
     top: 0;
     right: 0;
+    transition: .3s;
 }
 
 header .interface{
@@ -42,11 +44,6 @@ header .interface{
     justify-content: space-between;
     align-items: center;
 }
-
-/* header .logo img{
-    max-width: 40px;
-    cursor: pointer;
-} */
 
 header .logo a{
     color: #fff;
@@ -97,6 +94,34 @@ header .btn-reservar button:hover, .contato .formas-contato button:hover{
     color: #000;
     border: 2px solid var(--branco);
 }
+
+/* Menu Desktop Dinâmico */
+
+header.rolar{
+    background-color: #fff;
+    padding: 15px 0;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.527);
+}
+
+header.rolar .menu-desktop ul li a{
+    color: #000;
+}
+
+header.rolar .logo a{
+    color: #000;
+}
+
+header.rolar .btn-reservar button{
+    color: #000;
+    border: 2px solid #000;
+}
+
+header.rolar .btn-reservar button:hover{
+    background-color: #000;
+    color: #fff;
+}
+
+/* ---------------------- */
 
 /* Estilo da Secao Hero */
 
