--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,7 +121,90 @@ header.rolar .btn-reservar button:hover{
     color: #fff;
 }
 
+header.rolar .btn-menu-mobile i{
+    color: #000;
+}
+
 /* ---------------------- */
+
+/* Estilo do Menu Mobile */
+
+header .menu-mobile{
+    width: 0;
+    height: 0;
+    overflow: hidden;
+
+    background-color: #000000b9;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header .menu-mobile nav{
+    width: 100%;
+    text-align: center;
+}
+
+header .menu-mobile ul{
+    list-style-type: none;
+}
+
+header .menu-mobile ul li a{
+    display: block;
+    text-decoration: none;
+    font-size: 1.5em;
+    color: #fff;
+    width: 100%;
+    padding: 15px;
+    transition: .4s;
+}
+
+header .menu-mobile ul li a:hover{
+    background-color: #fff;
+    color: #000;
+}
+
+header .menu-mobile.abrir{
+    width: 100%;
+    height: 100vh;
+}
+
+/* --------------------- */
+
+/* Botão Menu Mobile */
+
+header .btn-menu-mobile{
+    display: none;
+    z-index: 10;
+}
+
+header .btn-menu-mobile i{
+    font-size: 2em;
+    color: #fff;
+    cursor: pointer;
+}
+
+header .btn-menu-mobile #open-menu{
+    display: block;
+}
+header .btn-menu-mobile #close-menu{
+    display: none;
+}
+
+
+header .btn-menu-mobile.alternar #open-menu{
+    display: none;
+}
+header .btn-menu-mobile.alternar #close-menu{
+    display: block;
+}
+
+/* ----------------- */
 
 /* Estilo da Secao Hero */
 
